@@ -238,6 +238,8 @@ def lang_treeview(self):
 	combo.set_property('has-entry', False)
 	combo.connect('edited', self.on_tv_lang_combo_edited, 0)
 	column=gtk.TreeViewColumn(_('Language'), combo, text=0)
+	column.set_property('min-width', 80)
+	column.set_property('resizable', True)
 	column.set_sort_column_id(0)
 	treeview.append_column(column)
 	
@@ -258,6 +260,8 @@ def lang_treeview(self):
 	combo.set_property('has-entry', False)
 	combo.connect('edited', self.on_tv_lang_combo_edited, 1)
 	column=gtk.TreeViewColumn(_('Type'), combo, text=1)
+	column.set_property('min-width', 80)
+	column.set_property('resizable', True)
 	column.set_sort_column_id(1)
 	treeview.append_column(column)
 
@@ -271,6 +275,8 @@ def lang_treeview(self):
 	combo.set_property('has-entry', False)
 	combo.connect('edited', self.on_tv_lang_combo_edited, 2)
 	column=gtk.TreeViewColumn(_('Codec'), combo, text=2)
+	column.set_property('min-width', 80)
+	column.set_property('resizable', True)
 	column.set_sort_column_id(2)
 	treeview.append_column(column)
 	
@@ -284,6 +290,8 @@ def lang_treeview(self):
 	combo.set_property('has-entry', False)
 	combo.connect('edited', self.on_tv_lang_combo_edited, 3)
 	column=gtk.TreeViewColumn(_('Channels'), combo, text=3)
+	column.set_property('min-width', 80)
+	column.set_property('resizable', True)
 	column.set_sort_column_id(3)
 	treeview.append_column(column)
 	
@@ -297,6 +305,8 @@ def lang_treeview(self):
 	combo.set_property('has-entry', False)
 	combo.connect('edited', self.on_tv_lang_combo_edited, 4)
 	column=gtk.TreeViewColumn(_('Subtitle format'), combo, text=4)
+	column.set_property('min-width', 80)
+	column.set_property('resizable', True)
 	column.set_sort_column_id(4)
 	treeview.append_column(column)
 	
