@@ -6,6 +6,7 @@ Griffith ChangeLog
 
 2007-05-31  Piotr Ożarowski
 	* IMDB, IMDB-de and KinoDe movie plugins updated (thanks to Michael Jahn)
+	* Resizable columns in add movie window's languages tab (thanks to Michael Jahn)
 
 2007-05-22  Piotr Ożarowski
 	* Minor fix in dbupgrade.py
